# txaws

./: .gitignore  LICENSE  MANIFEST.in  Makefile  pyproject.toml  setup.cfg  tox.ini
src/txaws/: _auth_v4.py  credentials.py  version.py
src/txaws/client/: _validators.py
src/txaws/client/discover/: command.py  entry_point.py
src/txaws/client/tests/: server.key  server_san.key  test_base.py
src/txaws/ec2/: model.py
src/txaws/ec2/tests/: test_client.py
src/txaws/route53/: client.py  model.py
src/txaws/s3/: client.py
src/txaws/s3/tests/: test_client.py
src/txaws/server/tests/: test_exception.py  test_resource.py
src/txaws/testing/: producers.py  route53.py  s3.py
src/txaws/tests/: test_util.py
txaws/: _auth_v4.py  util.py  wsdl.py
txaws/client/: base.py
txaws/client/discover/tests/: test_command.py  test_entry_point.py
txaws/client/tests/: server.crt  server_san.crt  server_san.key  test_ssl.py
txaws/ec2/: client.py
txaws/ec2/tests/: test_client.py
txaws/route53/: client.py
txaws/route53/tests/: test_route53.py  test_util.py
txaws/s3/: client.py
txaws/s3/tests/: test_client.py
txaws/server/: exception.py  resource.py  schema.py
txaws/server/tests/: test_schema.py
txaws/testing/: ec2.py  producers.py  s3_tests.py
txaws/tests/: test_auth_v4.py  test_aws4_testsuite.py  test_exception.py  test_util.py  test_wsdl.py
