[metadata]
name = txAWS
version = 0.6.0
url = https://github.com/perfect5th/txaws
author = txAWS Developers
maintainer = Mitch Burton
maintainer_email = mitch.burton@canonical.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
license = MIT
description = Async library for EC2, OpenStack, and Eucalyptus

[options]
zip_safe = False
install_requires =
    attrs
    constantly
    incremental
    lxml
    python-dateutil
    pyrsistent
    twisted[tls]
    venusian
python_requires = >=3.7, <4
scripts =
    bin/aws-status
    bin/txaws-create-bucket
    bin/txaws-delete-bucket
    bin/txaws-delete-object
    bin/txaws-discover
    bin/txaws-get-bucket
    bin/txaws-get-object
    bin/txaws-head-object
    bin/txaws-list-buckets
    bin/txaws-put-object
include_package_data = True
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
